crates/analyzer/tests/snapshots/errors__ctx_undeclared.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: cannot find value `ctx` in this scope
  ┌─ compile_errors/ctx_undeclared.fe:3:16
  │
3 │         return ctx.block_number()
  │                ^^^ undefined


